Fix flickering style on markdown editor preview mode

--- a/app/javascript/layouts/tailwind.css
+++ b/app/javascript/layouts/tailwind.css
@@ -56,7 +56,7 @@ h6 {
 /* Button Styles */
 
 .btn-default {
-  @apply bg-gray-200 text-gray-600;
+  @apply bg-gray-300 text-gray-800;
 }
 
 .btn-default:hover {
@@ -136,7 +136,7 @@ button:disabled:hover, .disabled:hover, button:disabled:focus, .disabled:focus {
 }
 
 .btn-small {
-  @apply py-1 px-3 text-xs h-6;
+  @apply py-1 px-3 text-xs h-7 leading-tight;
 }
 
 .btn-normal {
